# NotificationBrokerSystem

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.integration.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  engineering-style.md
docs/superpowers/plans/: 2026-06-27-notification-center-hardening.md
docs/superpowers/specs/: 2026-06-27-notification-center-hardening-design.md
ops/grafana/dashboards/: notification-center-pipeline.json  notification-center-red.json  notification-center-use.json
ops/prometheus/: prometheus.yml
src/backend/: __init__.py  app_factory.py  main.py  runtime.py
src/backend/api/: dependencies.py  routing.py
src/backend/core/: __init__.py  auth.py  config.py  cursors.py  http_limits.py  metrics.py
src/backend/db/: __init__.py  session.py  unit_of_work.py
src/backend/domain/: __init__.py  enums.py  errors.py  read_models.py  results.py  value_objects.py
src/backend/seeding/: __init__.py  demo_data.py
src/backend/services/: audience_service.py  notification_fanout_service.py  notification_service.py  pipeline_metrics_service.py  quota_service.py  retry_service.py  web_notification_service.py
src/migrations/: env.py
src/migrations/versions/: 0001_initial_schema.py  0002_hardening.py
src/workers/: __init__.py  factory.py
src/workers/delivery/: __init__.py  base.py  email.py  email_templates.py  (+4 more)
tests/integration/: conftest.py  test_postgres_demo_data_seeder.py  test_postgres_notification_creation_concurrency.py  test_postgres_notification_idempotency.py  test_postgres_outbox_repository.py  test_postgres_quota_repository.py  test_postgres_retry_concurrency.py  test_redpanda_notification_consumer.py  test_redpanda_outbox_publisher.py
tests/unit/: test_api_routing.py  test_app_factory.py  test_container_config.py  test_db_models.py  test_demo_data_seeder.py  test_email_delivery.py  test_idempotency.py  test_kafka_consumer.py  test_kafka_publisher.py  test_local_observability_config.py  test_metrics.py  test_migrations.py  test_notification_consumer_worker.py  test_notification_creation_service.py  test_notification_fanout_service.py  test_notification_repository.py  test_notification_request_validation.py  test_notification_worker.py  test_notifications_api.py  test_outbox_publisher.py  test_process_runtime.py  test_quota_service.py  test_retry_service.py  test_settings.py  test_worker_factory.py  test_workload_generator.py
(+36 files in other folders)
