[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "notification-center"
version = "0.1.0"
description = "FastAPI notification center demo with PostgreSQL, Kafka, and Mailpit delivery."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.138.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "sqlalchemy>=2.0.51",
  "alembic>=1.18.4",
  "psycopg[binary]>=3.3.4",
  "pyjwt>=2.13.0",
  "aiokafka>=0.14.0",
  "prometheus-client>=0.25.0",
  "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-kwparametrize>=0.0.3",
  "httpx2>=2.4.0",
  "ruff>=0.15.19",
  "mypy>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "integration: tests that require external services such as PostgreSQL",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/workers"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["backend", "workers"]
